--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,8 @@
 
 body{
     font-family: 'Poppins', sans-serif;
+    background: #FFFFFF;
+
 }
 /* header style */
 header > nav {
@@ -16,11 +18,15 @@ nav > span > a{
     color: black;
     
 }
+.fas {
+ font-size: 20px;   
+ padding-left: 10px;
+}
 
 /* Influencer style */
 .influencers {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;  
 } 
 .influencer{
@@ -33,15 +39,144 @@ height: 270px;
     font-weight: 700;
 }
 
-button{
+.color-button{
     background: #E02C6D;
  border-radius: 41px;
          width: 196px;
         height: 44px;
          color: #FFFFFF;
+         font-size: medium;
+    
+
+}
+.top-button span{
+    padding-left: 10px;
+    font-size: medium;
+    
 }
 .camera{
     width: 440px;
     height: 414px;
+    padding-top: 50px;
+}
+.camera:hover img{
+    transform: scale(1.3);
+    transition: 3s ease;
+}
+/* brand logo */
+.brand-logo{
+    background: #FFFFFF;
+    margin:70px 150px;
+}
+.logo{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 100px;
+
+  
 }
 
+ /* collections style */
+ .collection-container{
+     margin: 100px;
+     padding: 100px;
+     
+ }
+ 
+ .collections, .media-blogger{
+     display: grid;
+     grid-template-columns: repeat(3, 1fr); 
+     grid-gap: 30px;
+     justify-content: center;        
+ }
+ .common-title{
+     text-align: center;
+     padding: 30px 0;
+     color: rgb(224, 44, 109);;
+ }
+ .collection{
+   margin: 5px;
+   padding: 8px;
+   background: #FFFFFF;
+   box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+   
+ }
+ 
+ .fas.icon-star{
+    color: #FB8200;
+    font-size: small;
+ }
+ .rating{
+     padding-left: 10px;
+ }
+ .see-more{
+    text-decoration: none;
+    font-size:larger;
+    color: rgb(224, 44, 109);
+    display: block;
+    text-align: right;
+    padding-top: 20px;
+ }
+
+ /* blogger section start */
+.bloggers-container{
+    margin: 100px;
+    padding: 100px;
+    
+    
+}
+ .blogger{
+    margin: 5px;
+    padding: 8px;
+    background:#CAD5E2;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+   border-radius: 5px;
+ }
+ .blogger-banner img{
+     width: 300px;
+     height: 256px;
+     overflow: hidden;
+ }
+ .blogger-banner:hover img{
+    transform: scale(1.1);
+    transition: 3s ease;
+ }
+
+ /* blogger section end */
+
+ 
+/* footer design starts */
+
+footer{
+    background-color: rgb(10, 8, 38);
+    margin-top: 1em;
+}
+
+.footer{
+    color: white;
+    display: flex;
+    flex-direction: column;
+   align-items: center;
+   text-align: center;
+}
+
+.footer-info>h2{
+    margin-bottom: 0%;
+}
+
+.footer-social{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 2em;
+}
+
+.footer-social>.social{
+    margin-left: 1em;
+}
+hr{
+    color: blanchedalmond;
+}
+
+/* footer design ends */
