--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,8 @@
 /* font family */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
-
+main{
+    margin: 10px;
+}
 body{
     font-family: 'Poppins', sans-serif;
     background: #FFFFFF;
@@ -54,12 +56,12 @@ height: 270px;
     font-size: medium;
     
 }
-.camera{
+.camera-img{
     width: 440px;
     height: 414px;
     padding-top: 50px;
 }
-.camera:hover img{
+.camera-img:hover img{
     transform: scale(1.3);
     transition: 3s ease;
 }
@@ -70,7 +72,7 @@ height: 270px;
 }
 .logo{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     margin: 100px;
 
@@ -113,9 +115,9 @@ height: 270px;
  }
  .see-more{
     text-decoration: none;
-    font-size:larger;
+    font-size:medium;
     color: rgb(224, 44, 109);
-    display: block;
+
     text-align: right;
     padding-top: 20px;
  }
@@ -180,3 +182,22 @@ hr{
 }
 
 /* footer design ends */
+ 
+/* media query for mobile */
+
+@media only screen and (max-width: 688px) {
+    header > nav > .header-nav{
+        display: none;
+    }
+    .influencers, .half{
+        width: 100px;
+        flex-direction: column;
+    }
+    .brand-logo{
+        display: none;
+    }
+    .collections, .media-blogger{
+        grid-template-columns: repeat(1, 1fr);
+}
+     
+ }   
